Add webpack dependencies

--- a/daily/20181108/package.json
+++ b/daily/20181108/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/index.js",
+    "start": "./build_and_run.sh",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:w": "webpack",
-    "build:b": "babel index.js -d dist"
+    "build:w": "NODE_ENV=production webpack",
+    "build:b": "babel index.js -d dist/babel",
+    "start:w": "node ./dist/webpack/index.js",
+    "start:b": "node ./dist/babel/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +18,8 @@
     "@babel/core": "^7.1.5",
     "@babel/preset-env": "^7.1.5",
     "babel-loader": "^8.0.4",
-    "webpack": "^4.25.1"
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0"
