--- a/daily/20181128/package.json
+++ b/daily/20181128/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "scripts": {
     "raw": "node ./src/index.js",
-    "plain": "babel ./src/index.js -o ./dist/plain.js --config-file ./babel.config.plain.js && node ./dist/plain.js",
-    "usage": "babel ./src/index.js -o ./dist/usage.js --config-file ./babel.config.usage.js && node ./dist/usage.js",
-    "entry": "babel ./src/index.js -o ./dist/entry.js --config-file ./babel.config.entry.js && node ./dist/entry.js",
-    "webpack:p": "BUILT_INS=plain webpack && node ./dist/plain.js",
-    "webpack:u": "BUILT_INS=usage webpack && node ./dist/usage.js",
-    "webpack:e": "BUILT_INS=entry webpack && node ./dist/entry.js"
+    "plain": "babel ./src/index.js -o ./dist/plain.js --config-file ./babel.config.plain.js && echo 'babel success!!' && node ./dist/plain.js",
+    "usage": "babel ./src/index.js -o ./dist/usage.js --config-file ./babel.config.usage.js && echo 'babel success!!' && node ./dist/usage.js",
+    "entry": "babel ./src/index.js -o ./dist/entry.js --config-file ./babel.config.entry.js && echo 'babel success!!' && node ./dist/entry.js",
+    "webpack:p": "BUILT_INS=plain webpack && echo 'babel success!!' && node ./dist/plain.js",
+    "webpack:u": "BUILT_INS=usage webpack && echo 'babel success!!' && node ./dist/usage.js",
+    "webpack:e": "BUILT_INS=entry webpack && echo 'babel success!!' && node ./dist/entry.js"
   },
   "author": "",
   "license": "ISC",
